--- a/application.properties
+++ b/application.properties
@@ -3,8 +3,8 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-## book_store is database name
-spring.datasource.url=jdbc:postgresql://localhost:5432/book_store 
+## book_score is database name
+spring.datasource.url=jdbc:postgresql://localhost:5432/book_score 
 ##Check your postico, your username is probably your apple account name
-spring.datasource.username=USERNAME_GOES_HERE
+spring.datasource.username=wolfea
 #spring.datasource.password=password
